crates/jsonschema-codegen/tests/ui/invalid_any_of_empty.rs
#[jsonschema::validator(schema = r#"{"anyOf":[]}"#)]
struct InvalidAnyOfEmptyValidator;

fn main() {}
